# deep-reason

./: .gitignore  LICENSE  README.md  pyproject.toml  topic_info.csv
baseline/: langchain_baseline.py  langchain_baseline_graph.py
baseline/utils/: custom_memgraph_qa.py
config/: compose.yaml
deep_reason/: agent_kg_extraction.py  chains.py  envs.py  main.py  pipeline.py  prompts.py  schemes.py  state.py  tools.py  topic_modeling.py  utils.py  visualization.py
deep_reason/agents/: agent_kg_extraction.py  base_agent.py
deep_reason/chains/: chains.py
deep_reason/gen_agent/: agent.py  cli.py  dataset_conversion.py  example_agent_usage.py  example_community_chains.py  prompts.py  sampling.py  scheme.py  tmp_example_usage.py
deep_reason/kg_agent/: agent.py  agent_v2.py  chains.py  schemes.py  utils.py
deep_reason/knowledge_editing/easy_edit/: README.md  knowledge_editor.py  run_knowledge_editor.py
deep_reason/parsing/: utils.py
deep_reason/prompts/: kg_prompts.py
deep_reason/rag/: README.md  en-es-index-body.yaml  pipeline.py  prompts.py  ru-es-index-body.yaml  schemes.py  upload.py  utils.py
deep_reason/rag_agent/: __init__.py  agent.py  chains.py
deep_reason/scoring/: answer_quality.py
deep_reason/tests/: test_community_chains.py
deep_reason/tools/: tools.py  web_search.py
deep_reason/topic_modeling/: topic_modeling.py
deep_reason/topic_modeling/bertopic/: muli_aspect.py  topic_modeling.py  topic_modeling_cli.py
docker/: builder.dockerfile  deep-reason.dockerfile
examples/: answer_quality_calculation.py  dataset_conversion.py  kg_extraction.py  langchain_baseline.py  print_topics.py  qa_preparation_for_obliqa.py  rag_agent_example.py  run_gen_agent.py
notebooks/: edit_dataset_analysis.ipynb  graph_analysis.ipynb
resources/data/: .gitignore  obliqa_upload_test.json
resources/data/obliqa_test_data/: sample.json
results/: topic_results_20250503_191359.json  topic_results_20250503_192349.json
scripts/: csv_from_es_to_txt.py  disk_memory.py  es_to_csv.py  es_to_csv.sh  grctl  rag_run_cli.sh  run_queries.sh
